src/css/projectDisplay.module.css
.projectDisplayWrapper {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: #2e86ab;
  color: white;

  padding-bottom: 50px;
}

.title {
  margin-top: 200px;
  margin-bottom: 50px;
  font-size: 3rem;
  font-weight: bold;
}

.projectWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 80%;
  min-width: 50px;
  max-width: 100%;
  z-index: 1;
  margin: 50px 0;
}

.projectWrapper:nth-child(even) {
  flex-direction: row-reverse;
}
.projectImageWrapper {
  display: flex;
  width: 50%;
}
.projectImage {
  display: block;
  width: 50%;

  filter: drop-shadow(3px 3px 8px #27272769);
}

.projectInfoWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;

  padding: 30px 80px;

  width: 50%;
}

.projectInfoWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;

  padding: 30px 80px;

  width: 50%;
}

.projectTitle {
  font-size: 2rem;
  font-weight: bold;
}

.projectTextSection {
  width: 100%;
  padding: 10px 0;
  font-size: 1.2rem;
}

.projectButton,
.codeButton {
  display: inline-block;
  font-weight: bold;
  font-size: 1.1rem;
  margin: 20px 15px;
  padding: 8px 20px;

  border: none;
  text-decoration: none;
  border-radius: 5px;

  transition-property: box-shadow;
  transition-duration: 0.2s;

  box-shadow: 0px 0px 0px 0px #2727273d;
}

.projectButton:hover,
.codeButton:hover {
  cursor: pointer;
  box-shadow: 2px 2px 6px 2px #27272752;
}

.projectButton {
  background-color: white;
  color: #272727;
}
.codeButton {
  background-color: #272727;
  color: white;
}

@media only screen and (max-width: 1400px) {
  .projectWrapper {
    width: 90%;
  }
}

@media only screen and (max-width: 1300px) {
  .projectInfoWrapper {
    padding: 10px 20px;
  }
}

@media only screen and (max-width: 1100px) {
  .projectWrapper {
    flex-direction: column;
  }
  .projectWrapper:nth-child(even) {
    flex-direction: column;
  }

  .projectImage {
    width: 100%;
  }
  .projectInfoWrapper {
    width: 100%;
  }
}

@media only screen and (max-width: 800px) {
  .title {
    margin-top: 150px;
  }
}

@media only screen and (max-width: 530px) {
  .title {
    margin-top: 100px;
  }
}

